# descriptor_apps

./: .gitignore  README.md  clean  regenerate.sh  sort_reprocessed.sh
config/: config_bow_calculator.yaml  config_cloud_labeler.yaml  config_codebook_generator.yaml  config_dense_evaluator.yaml  config_descriptor.yaml  config_reprocessor.yaml
src/: BoWCalculator.cpp  CMakeLists.txt  CloudLabeler.cpp  CodebookGenerator.cpp  DenseEvaluator.cpp  Descriptor.cpp  Reprocessor.cpp  Test.cpp
